--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,6 +1,51 @@
 @import '~bootstrap/scss/bootstrap';
 
-body{
-    background-color: #333;
-    color: white;
+body {
+    background-color: #b1b2b3;
+    color: #0097b5;
+
+
+    h1 {
+        margin: 50px 0;
+        padding: 30px 0;
+        color: red;
+        background-image: linear-gradient(90deg, #23b515, #00aa78, #0097b5, #007eca);
+
+    }
+
+    .custom-table {
+        width: 100%;
+        margin: 50px 0;
+        border-collapse: collapse;
+
+        th {
+            background-color: #00aa78;
+            vertical-align: middle;
+            color: #f800a5;
+            padding: 10px;
+            font-weight: bold;
+            text-align: center;
+        }
+
+        td {
+            padding: 10px;
+            border-bottom: 1px solid #b5b513;
+        }
+        
+        tbody {
+
+            tr{
+            color: #0097b5;
+            }
+            tr:last-child {
+                td {
+                    border-bottom: none;
+                }
+            }
+            
+            tr:hover {
+                background-color: #cc4c4c;
+            }
+        }
+    }
 }
